--- a/index.html
+++ b/index.html
@@ -1,5 +1,14 @@
-<p>
-^ ^
-o o
- .
-</p>
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+</head>
+<body>
+
+<code>
+(┛ಠ_ಠ)┛彡┻━┻
+</code>
+
+</body>
+</html>
+
